fix image alignment for garmin process

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -370,6 +370,11 @@ span {
 	}
 }
 
+.align {
+	display: flex;
+	align-items: center;
+}
+
 .garmin {
 	color: $garmin;
 }
